--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,8 @@
         </dependency>
         <dependency>
             <groupId>com.github.siroshun09.configapi</groupId>
-            <artifactId>yaml</artifactId>
-            <version>3.1.0</version>
+            <artifactId>configapi-yaml</artifactId>
+            <version>4.2.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
