feat: add option to ignore jar files

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,6 +4,7 @@ backup:
   plugin:
     interval: 60
     backup-after-startup: true
+    ignore-jar-files: false
     exclude-folders: []
   world:
     interval: 60
