feat: support for setting whether to save the world before backup

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,6 +8,7 @@ backup:
     exclude-folders: []
   world:
     interval: 60
+    save-before-backup: true
     backup-after-startup: true
     exclude-worlds: []
   purge:
