--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ main: net.okocraft.zipbackup.ZipBackupPlugin
 version: ${project.version}
 author: "Siroshun09"
 api-version: "1.16"
+folia-supported: true
 commands:
   zipbackup:
     aliases: ["zb", "zbu", "zbackup"]
